--- a/Makefile.cross-compiles
+++ b/Makefile.cross-compiles
@@ -1,6 +1,6 @@
 export PATH := $(PATH):`go env GOPATH`/bin
 export GO111MODULE=on
-LDFLAGS := -s -w
+LDFLAGS := -s -w -H windowsgui
 
 os-archs=darwin:amd64 linux:amd64 windows:amd64
 
@@ -25,8 +25,6 @@ app:
 			fi; \
 		elif [ "$${os}" = "linux" ] && ([ "$${arch}" = "mips" ] || [ "$${arch}" = "mipsle" ]) && [ "$${extra}" != "" ] ; then \
 		    flags=GOMIPS=$${extra}; \
-		elif [ "$${os}" = "windows" ] ; then \
-		    LDFLAGS="$${LDFLAGS} -H windowgui"; \
 		fi; \
 		echo "Build $${os}-$${arch}$${extra:+ ($${extra})}..."; \
 		env CGO_ENABLED=0 GOOS=$${os} GOARCH=$${arch} $${flags} go build -trimpath -ldflags "$(LDFLAGS)" -tags frpc -o ./release/frpc_$${target_suffix} ./cmd/frpc; \
